create and get list doc
