# model.go
@@ -22,3 +22,14 @@ type Article struct {
 	CreatedAt time.Time  `json:"created_at"`
 	UpdatedAt *time.Time `json:"updated_at"`
 }
+
+// JSONResponse ...
+type JSONResponse struct {
+	Message string      `json:"message"`
+	Data    interface{} `json:"data"`
+}
+
+// JSONErrorResponse ...
+type JSONErrorResponse struct {
+	Error string `json:"error"`
+}
